manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reddrop-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reddrop-api
  template:
    metadata:
      labels:
        app: reddrop-api
    spec:
      containers:
        - name: reddrop-api
          image: docker.io/ramialkaro/reddrop-api:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: reddrop-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
